fix: options button friendlist item wrong position

--- a/src/app/components/profile/friend-list/friend-list-item/friend-list-item.component.scss
+++ b/src/app/components/profile/friend-list/friend-list-item/friend-list-item.component.scss
@@ -5,6 +5,7 @@
   padding: 16px;
   align-items: center;
   border-radius: 10px;
+  position: relative;
   border: 1px solid rgba(#999, .2);
   box-shadow: 0 1px 1px rgba(#333, .1);
 
@@ -13,6 +14,11 @@
     flex-direction: column;
     justify-content: center;
     height: 100%;
+  }
+
+  .options {
+    position: absolute;
+    right: 10px;
   }
 
   .avatar-container {
